Add sidebar supplier link and guard inventory tabs by role